# projects

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
src/: checkLicenseHeaders.js  main.js  main.rs  symlinkHiddenDirs.js  syncRepositories.js  util.js
