[package]
name = "fox-repos"
description = "Multi-repository manager."
license = "MPL-2.0"
homepage = "https://github.com/fox-tools/repos"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "repos"

[dependencies]
anyhow = "1.0.75"
octocrab = "0.30.1"
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
